k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-placeholder-api
spec:
  selector:
    app: json-placeholder-api
  ports:
    - name: http
      port: 80
      targetPort: http
